[gd_scene load_steps=7 format=3 uid="uid://clfepkedxjswg"]

[ext_resource type="Script" path="res://Scenes/Card/card.gd" id="1_d41f0"]
[ext_resource type="Texture2D" uid="uid://k0l38bh87g25" path="res://assets/cardBack.png" id="2_w0d1g"]

[sub_resource type="GDScript" id="GDScript_btq4w"]
script/source = "@tool
extends Resource

@export var sprite: Texture

@export var text: String
@export var noMsg: String
@export var yesMsg: String

@export var yesEducation: float = 0
@export var yesIncome:    float = 0
@export var yesSocial:    float = 0
@export var yesHealth:    float = 0
	
@export var noEducation: float = 0
@export var noIncome:    float = 0
@export var noSocial:    float = 0
@export var noHealth:    float = 0

"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nkruh"]

[sub_resource type="Resource" id="Resource_0h657"]
script = SubResource("GDScript_btq4w")
sprite = SubResource("CompressedTexture2D_nkruh")
text = "Você tem que passar a noite resolvendo um problema no trabalho, mas seu chefe irá lhe recompensar por isso"
noMsg = "Ir dormir"
yesMsg = "Fazer Hora extra"
yesEducation = 0.0
yesIncome = 20.0
yesSocial = 0.0
yesHealth = -20.0
noEducation = 0.0
noIncome = 0.0
noSocial = 0.0
noHealth = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8g6l"]
size = Vector2(208, 216)

[node name="Card" type="Area2D"]
script = ExtResource("1_d41f0")
cardResource = SubResource("Resource_0h657")

[node name="CardBack" type="Sprite2D" parent="."]
position = Vector2(1.78814e-06, -40)
scale = Vector2(0.8125, 0.84375)
texture = ExtResource("2_w0d1g")

[node name="CardContent" type="Sprite2D" parent="."]
position = Vector2(1.26362e-05, -40)
scale = Vector2(0.7, 0.689)
texture = SubResource("CompressedTexture2D_nkruh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_v8g6l")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
